--- a/test/fixtures/cards.yml
+++ b/test/fixtures/cards.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: cards
+#
+#  id         :integer          not null, primary key
+#  deck_id    :integer          not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  front      :text
+#  back       :text
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
