--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-circular-progressbar": "^0.8.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-modal": "^3.3.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
