--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.3.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-textarea-autosize": "^6.0.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
