--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "postinstall": "webpack -p"
   },
   "engines": {
-    "node": "6.10.1",
-    "npm": "3.10.10"
+    "node": "22.x",
+    "npm": "8.x"
   },
   "repository": {
     "type": "git",
